# static-infoscreen

./: .gitignore  Cargo.toml  Readme.md  infoscreen.conf  nginx.conf
src/: main.rs  static_infoscreen.rs
templates/: base.html  image.html  video.html  website.html
