[package]
name = "static-infoscreen"
version = "0.1.0"
authors = ["Alexander Sommer <dev@alexandersommer.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tera = "1"
regex = "1"
mime_guess = "2.0.3"
clap = "2.33.3"
